--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     </head>
     <body>
         <h1>my name is </h1>
-        <img src="/img/download.png" alt="">
+        <img src="/img/download.png"  alt="" style="height: 100px; width: 50px; ">
     </body>
 </html>
